@@ -126,6 +126,7 @@ class DebugApi implements \TYPO3\CMS\Core\SingletonInterface {
     public function debugTrail ($prependFileNames = false)
     {
         $trail = DebugUtility::debugTrail($prependFileNames);
+
         if ($this->dbgConf['BTRACE_LIMIT']) {
             $search = '// Geithware';
             $position = strpos($trail, $search);
@@ -210,7 +211,8 @@ class DebugApi implements \TYPO3\CMS\Core\SingletonInterface {
                     } else {
                         $this->callDebugger(
                             $this->dbgOutput,
-                            $debugOut
+                            $debugOut,
+                            true
                         );
                     }
                 }
@@ -272,7 +274,7 @@ class DebugApi implements \TYPO3\CMS\Core\SingletonInterface {
         }
     }
 
-    public function callDebugger ($debugFunc, $debugOut)
+    public function callDebugger ($debugFunc, $debugOut, $error = false)
     {
         try {
             if (
@@ -281,7 +283,14 @@ class DebugApi implements \TYPO3\CMS\Core\SingletonInterface {
                 is_object($GLOBALS['error']) &&
                 @is_callable([$GLOBALS['error'], 'debug'])
             ) {
-                $GLOBALS['error']->debug($debugOut, 'SQL debug');
+//                 $GLOBALS['error']->debug('B');
+                $GLOBALS['error']->debug($error, 'callDebugger $error');
+                $GLOBALS['error']->debug(
+                    $debugOut, 
+                    'SQL debug' . ($error ? '*ERROR*' : ''),
+                    ($error ? 'F' : null)
+                );
+//                 $GLOBALS['error']->debug('E');
             } else if (function_exists($debugFunc) && is_callable($debugFunc)) {
                 call_user_func($debugFunc, $debugOut, 'SQL debug');
             } else {
